n2n (2.1.0-1) unstable; urgency=low

  * Move manpage for edge to section 8.
  * Install manpage for n2n_v2 to section 7.

 -- Kim Hansen <kim@i9.dk>  Tue, 16 Mar 2010 16:12:30 +0100

n2n (2.0-1) hardy; urgency=low

  * New upstream release

 -- Richard Andrews <andrews@ntop.org>  Tue, 30 Oct 2009 22:26:04 +1100

n2n (1.3-1) hardy; urgency=low

  * New upstream release

 -- Richard Andrews <andrews@ntop.org>  Fri, 30 Jan 2009 23:49:56 +1100

n2n (1.2-1) unstable; urgency=low

  * Initial release

 -- Richard Andrews <andrews@ntop.org>  Thu, 10 Jul 2008 22:38:02 +1000
