@@ -1,3 +1,2 @@
 edge.8
-supernode.1
 n2n_v2.7
